# artie

./: .gitignore  Dockerfile  README.md  README_deployment.md  chainlit.md  chainlit_nl-NL.md  config_base.py  config_moma.py  config_rijks.py  config_tate.py  docker-compose.yml  main.py  push.py  pyproject.toml  scrape_moma.py  scrape_records.py  scrape_rijks.py  scrape_tate.py  spatial_understanding.py  utils.py
.chainlit/: config.toml
public/: theme.json
scripts/: scrape_records.py  scrape_records_dev.py
src/: cache.py  main.ipynb  main.py  rijks.ipynb
