[project]
name = "open-data-chatbot"
version = "0.1.0"
description = "A chatbot on open data"
readme = "README.md"
authors = [{name = "Vincent Min", email = "vincentmin17@gmail.com"}]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "cbsodata>=1.3.5",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

[tool.hatch.build.targets.wheel]
    packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "ruff>=0.9.3",
    "pytest>=8.3.4",
]
