[project]
name = "open-data-chatbot"
version = "0.1.0"
description = "A chatbot on open data"
readme = "README.md"
authors = [{name = "Vincent Min", email = "vincentmin17@gmail.com"}]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.1.2",
    "google-genai>=1.0.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "lxml>=5.3.0",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
]

[tool.hatch.build.targets.wheel]
    packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "ruff>=0.9.3",
    "pytest>=8.3.4",
]
