[project]
name = "artie"
version = "0.1.0"
description = "Discuss Rijks Museum art pieces with Artie"
readme = "README.md"
authors = [{name = "Vincent Min", email = "vincentmin17@gmail.com"}]
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.1.2",
    "datasets>=3.2.0",
    "google-genai>=1.0.0",
    "pillow>=11.1.0",
]
